--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
   <title>Todo List</title>
 </head>
 <body>
-  
+  <div class ="container">
+    <h1>To-Do List</h1>
+    <input type="text" id="taskInput" placeholder="New Task">
+    <button id="addTaskBtn">Add Task</button>
+    <ul id="taskList"></ul>
+  </div>
+  <script src="/index.js"></script>
 </body>
 </html>
